--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <meta name="twitter:title" content="kigemmanuel - Full Stack Developer">
   <meta name="twitter:description" content="Building the next generation of digital solutions">
   <title>kigemmanuel - Full Stack Developer & Snapp Framework Creator</title>
-  <link rel="preload" href="/assets/pastel_gradient.webp">
-  <link rel="stylesheet" href="style/output.css">
+  <link rel="preload" href="/assets/pastel_gradient.webp" as="image">
+  <link rel="stylesheet" href="style/input.css">
   <link rel="icon" type="image/png" href="assets/kigemmanuel.webp">
 </head>
-<body class="min-h-screen scroll-smooth my-background Preahvihear">
+<body class="min-h-screen my-background Preahvihear">
   <div id="snapp-body"></div>
   <script type="module" src="src/index.js"></script>
 </body>
