--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="kigemmanuel - Full Stack Developer">
   <meta name="twitter:description" content="Building the next generation of digital solutions">
-  <title>kigemmanuel - Full Stack Developer & Snapp Framework Creator</title>
-  <link rel="preload" href="/assets/pastel_gradient.webp" as="image">
-  <link rel="stylesheet" href="style/input.css">
+  <title>kigemmanuel Sofrware Engineer</title>
+  <link rel="stylesheet" href="style/style.css">
   <link rel="icon" type="image/png" href="assets/kigemmanuel.webp">
 </head>
-<body class="min-h-screen my-background Preahvihear">
+<body class="my-background-light Preahvihear">
+  <div class="gradient-blob blob-1"></div>
+  <div class="gradient-blob blob-2"></div>
+  <div class="gradient-blob blob-3"></div>
   <div id="snapp-body"></div>
   <script type="module" src="src/index.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
