Set package json

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
   <meta name="twitter:description" content="Building the next generation of digital solutions">
   <title>kigemmanuel Sofrware Engineer</title>
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/output.css">
   <link rel="icon" type="image/png" href="assets/kigemmanuel.webp">
 </head>
-<body class="my-background-light Preahvihear">
+<body class="my-background-dark Preahvihear">
   <div class="gradient-blob blob-1"></div>
   <div class="gradient-blob blob-2"></div>
   <div class="gradient-blob blob-3"></div>
+  <h3 class="text-blue-500"></h3>
   <div id="snapp-body"></div>
   <script type="module" src="src/index.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
