--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
   <link rel="stylesheet" href="style/output.css">
   <link rel="icon" type="image/png" href="assets/kigemmanuel.webp">
 </head>
-<body class="my-background-dark Preahvihear">
+<body class="my-background-light Preahvihear">
   <div class="gradient-blob blob-1"></div>
   <div class="gradient-blob blob-2"></div>
   <div class="gradient-blob blob-3"></div>
-  <h3 class="text-blue-500"></h3>
   <div id="snapp-body"></div>
   <script type="module" src="src/index.js"></script>
 </body>
