--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="style/output.css">
   <link rel="icon" type="image/png" href="assets/kigemmanuel.webp">
 </head>
-<body class="my-background-light Preahvihear">
+<body class="my-background-light Preahvihear scroll-smooth">
   <div class="gradient-blob blob-1"></div>
   <div class="gradient-blob blob-2"></div>
   <div class="gradient-blob blob-3"></div>
