--- a/index.html
+++ b/index.html
@@ -1,28 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Kig Emmanuel - Full Stack Web Developer specializing in Full Stack Website, Telegram Mini Apps, and Web3. Creator of Snapp JS Framework.">
-  <meta name="keywords" content="Full Stack Developer, Telegram Bots, Telegram Mini Apps, Web Developer, Blockchain, Web3, Snapp Framework, JavaScript, React, Node.js">
+  <meta name="description" content="Kig Emmanuel .">
+  <meta name="keywords" content="kigemmanuel, emmanuel, kigs, kig's, Full Stack Developer, Telegram Bots, Telegram Mini Apps, Web Developer, Blockchain, Web3, Snapp Framework, JavaScript, React, Node.js">
   <meta name="author" content="kigemmanuel">
-  <meta property="og:title" content="kigemmanuel- Full Stack Developer">
-  <meta property="og:description" content="Building the next generation of digital solutions. Specializing in Web Dev, Telegram Mini Apps, and Web3 Development.">
+  
+  <meta property="og:title" content="kigemmanuel Software Engineer">
+  <meta property="og:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp Framework.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/kigemmanuel.png">
+  <meta property="og:image" content="assets/kigemmanuel.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="kigemmanuel - Full Stack Developer">
-  <meta name="twitter:description" content="Building the next generation of digital solutions">
+  <meta name="twitter:title" content="kigemmanuel Software Engineer">
+  <meta name="twitter:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp JS Framework.">
+
   <title>kigemmanuel Sofrware Engineer</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="icon" type="image/webp" href="assets/kigemmanuel.webp">
+  <link rel="icon" type="image/png" href="assets/kigemmanuel.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Preahvihear&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/output.css">
-  <link rel="icon" type="image/png" href="assets/kigemmanuel.webp">
 </head>
-<body class="my-background-light Preahvihear scroll-smooth">
+<body class="my-background-light preahvihear-regular scroll-smooth">
   <div class="gradient-blob blob-1"></div>
   <div class="gradient-blob blob-2"></div>
   <div class="gradient-blob blob-3"></div>
-  <div id="snapp-body"></div>
+  <div id="snapp-body">
+    <main>
+      <section class="mt-10 mb-4 mx-8 md:mx-14 mlg:mx-20 lg:mx-44">
+        <div class="flex w-[100%] flex-col mt-28 md:flex-row-reverse md:justify-between md:items-center md:gap-x-20">
+          <div class="mx-auto shrink-0 mb-14 p-2 backdrop-blur-xl bg-gradient-to-br from-orange-500/30 via-purple-500/70 to-blue-700/50 rounded-full">
+            <img 
+              src="/assets/kigemmanuel.webp"
+              alt="kigemmanuel"
+              class="w-48 h-48 object-cover rounded-full md:mb-0" 
+            />
+          </div>
+          <article>
+            <h2 class="text-4xl font-bold">Hi, I'm kigemmanuel</h2>
+            <div>
+              <p class="font-bold">Software Engineer</p>
+              <p class="mt-5 leading-5">
+                With a strong foundation in both frontend and backend development, I bring ideas to life through clean code and thoughtful design.
+                <br /><br />
+                Whether it’s developing modern websites, creating custom frameworks, or automating workflows, I’m passionate about crafting solutions that make a real impact.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
+  </div>
   <script type="module" src="src/index.js"></script>
 </body>
 </html>
