--- a/index.html
+++ b/index.html
@@ -56,5 +56,33 @@
     </main>
   </div>
   <script type="module" src="src/index.js"></script>
+<script type="application/ld+json">
+ {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    name: "kigemmanuel kigs",
+    url: "https://www.melvinjonesrepol.com",
+    image: "https://www.melvinjonesrepol.com/images/melvinjonesrepol.png",
+    sameAs: [
+      "https://mrepol742.github.io",
+      "https://mrepol742-read-cv.vercel.app",
+      "https://mrepol742.vercel.app",
+      "https://mrepol742.netlify.app",
+    ],
+    jobTitle: "Software Engineer",
+    worksFor: {
+      "@type": "Organization",
+      name: "Self-Employed",
+    },
+  }
+</script>
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    name: "kigemmanuel Software Engineer",
+    url: "https://www.kigemmanuel.github.io",
+  }
+</script>
 </body>
 </html>
