--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Kig Emmanuel .">
+  <meta name="description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp JS Framework.">
   <meta name="keywords" content="kigemmanuel, emmanuel, kigs, kig's, Full Stack Developer, Telegram Bots, Telegram Mini Apps, Web Developer, Blockchain, Web3, Snapp Framework, JavaScript, React, Node.js">
   <meta name="author" content="kigemmanuel">
   
+  <meta property="og:url" content="https://kigemmanuel.github.io/">
   <meta property="og:title" content="kigemmanuel Software Engineer">
   <meta property="og:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp Framework.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/kigemmanuel.webp">
+  <meta property="og:image" content="https://kigemmanuel.github.io/assets/kigemmanuel.webp">
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="kigemmanuel Software Engineer">
   <meta name="twitter:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp JS Framework.">
