--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
               class="w-48 h-48 object-cover rounded-full md:mb-0" 
             />
           </div>
-          <article>
-            <h1 class="text-4xl font-bold">Hi, I'm kigemmanuel</h1>
+          <article class="text-slate-900">
+            <h1 class="text-4xl font-bold text-slate-900">Hi, I'm kigemmanuel</h1>
             <div>
-              <p class="font-bold">Software Engineer</p>
+              <p class="font-bold text-slate-500">Software Engineer</p>
               <p class="mt-5 leading-5">
                 With a strong foundation in both frontend and backend development, I bring ideas to life through clean code and thoughtful design.
                 <br /><br />
