--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Preahvihear&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/output.css">
+  <script>
+    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    if (prefersDark) {
+      document.documentElement.classList.add('dark');
+    } else {
+      document.documentElement.classList.remove('dark');
+    }
+  </script>
 </head>
-<body class="my-background-light preahvihear-regular scroll-smooth">
+<body class=" dark:bg-slate-800 bg-neutral-100 preahvihear-regular scroll-smooth transition-colors duration-300">
   <div class="gradient-blob blob-1"></div>
   <div class="gradient-blob blob-2"></div>
   <div class="gradient-blob blob-3"></div>
@@ -42,21 +50,19 @@
               class="w-48 h-48 object-cover rounded-full md:mb-0" 
             />
           </div>
-          <article class="text-slate-900">
-            <h1 class="text-4xl font-bold text-slate-900">Hi, I'm kigemmanuel</h1>
+          <article class="text-slate-900 dark:text-gray-100 transition-colors duration-300">
+            <h1 class="text-4xl font-bold">Hi, I'm kigemmanuel</h1>
             <div>
-              <p class="font-bold text-slate-700">Software Engineer</p>
-              <p class="mt-5 leading-5">
-                With a strong foundation in both frontend and backend development, I bring ideas to life through clean code and thoughtful design.
-                <br /><br />
+              <p class="font-medium text-slate-700 dark:text-gray-400 transition-colors duration-300">Software Engineer</p>
+              <p class="mt-5 leading-5 text-slate-900 dark:text-gray-100 transition-colors duration-300">
+                With a strong foundation in both frontend and backend development, I bring ideas to life through clean code and thoughtful design.                
+              </p>
+              <p class="mt-5 leading-5 text-slate-900 dark:text-gray-100 transition-colors duration-300">
                 Whether it’s developing modern websites, creating custom frameworks, or automating workflows, I’m passionate about crafting solutions that make a real impact.
               </p>
             </div>
           </article>
         </div>
-      </section>
-    </main>
-  </div>
 
 <script type="module" src="src/index.js"></script>
 <script type="application/ld+json">
