Add other links

--- a/index.html
+++ b/index.html
@@ -43,32 +43,31 @@
   </div>
 <script type="module" src="src/index.js"></script>
 <script type="application/ld+json">
- {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    name: "kigemmanuel kigs",
-    url: "https://www.melvinjonesrepol.com",
-    image: "https://www.melvinjonesrepol.com/images/melvinjonesrepol.png",
-    sameAs: [
-      <!-- "https://mrepol742.github.io",
-      "https://mrepol742-read-cv.vercel.app",
-      "https://mrepol742.vercel.app",
-      "https://mrepol742.netlify.app", -->
-    ],
-    jobTitle: "Software Engineer",
-    worksFor: {
-      "@type": "Organization",
-      name: "Self-Employed",
-    },
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "kigemmanuel kigs",
+  "url": "https://kigemmanuel.github.io",
+  "image": "https://kigemmanuel.github.io/assets/kigemmanuel.webp",
+  "sameAs": [
+      "https://kigemmanuel.vercel.io",
+      "https://kigemmanuel.netlify.app",
+      "https://github.com/kigemmanuel",
+  ],
+  "jobTitle": "Software Engineer",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Self-Employed"
   }
+}
 </script>
 <script type="application/ld+json">
 {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    name: "kigemmanuel Software Engineer",
-    url: "https://www.kigemmanuel.github.io",
-  }
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "kigemmanuel Software Engineer",
+  "url": "https://kigemmanuel.github.io"
+}
 </script>
 </body>
 </html>
