--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="kigemmanuel, emmanuel, kigs, kig's, Full Stack Developer, Telegram Bots, Telegram Mini Apps, Web Developer, Blockchain, Web3, Snapp Framework, JavaScript, React, Node.js">
   <meta name="author" content="kigemmanuel">
   
+  <meta name="google-site-verification" content="MkYwpFNRozToj6sAquyMG0uR0UDk1cBzy-JtGtH3cUc" />
   <meta property="og:url" content="https://kigemmanuel.github.io">
   <meta property="og:title" content="kigemmanuel Software Engineer">
   <meta property="og:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp Framework.">
