--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <meta name="twitter:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp JS Framework.">
 
   <title>kigemmanuel Sofrware Engineer</title>
+  
+  <link rel="canonical" href="https://kigemmanuel.github.io" />
   <link rel="icon" type="image/webp" href="assets/kigemmanuel.webp">
   <link rel="icon" type="image/png" href="assets/kigemmanuel.png">
 
