--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <title>kigemmanuel Sofrware Engineer</title>
   
   <link rel="canonical" href="https://kigemmanuel.github.io" />
-  <link rel="icon" type="image/webp" href="assets/kigemmanuel.webp">
-  <link rel="icon" type="image/png" href="assets/kigemmanuel.png">
+  <link rel="icon" href="/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
