edit sofrware to software

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:title" content="kigemmanuel Software Engineer">
   <meta name="twitter:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp JS Framework.">
 
-  <title>kigemmanuel Sofrware Engineer</title>
+  <title>kigemmanuel Software Engineer | Full Stack Developer</title>
   
   <link rel="canonical" href="https://kigemmanuel.github.io" />
   <link rel="icon" href="/favicon.png" type="image/png" />
