--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="kigemmanuel, emmanuel, kigs, kig's, Full Stack Developer, Telegram Bots, Telegram Mini Apps, Web Developer, Blockchain, Web3, Snapp Framework, JavaScript, React, Node.js">
   <meta name="author" content="kigemmanuel">
   
+  <meta name="robots" content="index, follow">
   <meta name="google-site-verification" content="MkYwpFNRozToj6sAquyMG0uR0UDk1cBzy-JtGtH3cUc" />
   <meta property="og:url" content="https://kigemmanuel.github.io">
   <meta property="og:title" content="kigemmanuel Software Engineer">
@@ -19,7 +20,7 @@
   <meta name="twitter:title" content="kigemmanuel Software Engineer">
   <meta name="twitter:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp JS Framework.">
 
-  <title>kigemmanuel Software Engineer | Full Stack Developer</title>
+  <title>kigemmanuel (kigs) Software Engineer | Full Stack Developer</title>
   
   <link rel="canonical" href="https://kigemmanuel.github.io" />
   <link rel="icon" href="/favicon.png" type="image/png" />
@@ -51,15 +52,15 @@
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "kigemmanuel kigs",
+  "alternateName": ["kig's", "kigs", "Emmanuel"],
   "url": "https://kigemmanuel.github.io",
   "image": "https://kigemmanuel.github.io/assets/kigemmanuel.webp",
   "sameAs": [
-      "https://kigemmanuel.vercel.io",
-      "https://kigemmanuel.netlify.app",
-
-      "https://github.com/kigemmanuel",
-      "http://facebook.com/kigemmanuel0",
-      "https://x.com/kigemmanuel"
+    "https://kigemmanuel.vercel.app",
+    "https://kigemmanuel.netlify.app",
+    "https://github.com/kigemmanuel",
+    "https://facebook.com/kigemmanuel0",
+    "https://x.com/kigemmanuel"
   ],
   "jobTitle": "Software Engineer",
   "worksFor": {
