Complete nav bar added deffrent favicon size.....

--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>kigemmanuel (kigs) Software Engineer | Full Stack Developer</title>
+  <link rel="canonical" href="https://kigemmanuel.github.io" />
+  <meta name="google-site-verification" content="MkYwpFNRozToj6sAquyMG0uR0UDk1cBzy-JtGtH3cUc" />
+
   <meta name="description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp JS Framework.">
   <meta name="keywords" content="kigemmanuel, emmanuel, kigs, kig's, Full Stack Developer, Telegram Bots, Telegram Mini Apps, Web Developer, Blockchain, Web3, Snapp Framework, JavaScript, React, Node.js">
   <meta name="author" content="kigemmanuel">
-  
   <meta name="robots" content="index, follow">
-  <meta name="google-site-verification" content="MkYwpFNRozToj6sAquyMG0uR0UDk1cBzy-JtGtH3cUc" />
+
   <meta property="og:url" content="https://kigemmanuel.github.io">
   <meta property="og:title" content="kigemmanuel Software Engineer">
   <meta property="og:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp Framework.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://kigemmanuel.github.io/assets/kigemmanuel.png">
+  <meta property="og:site_name" content="kigemmanuel Software Engineer">
 
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://kigemmanuel.github.app/">
   <meta name="twitter:title" content="kigemmanuel Software Engineer">
   <meta name="twitter:description" content="Software Engineer passionate about crafting seamless full stack solutions and modern web experiences. Creator of Snapp JS Framework.">
+  <meta name="twitter:image" content="https://kigemmanuel.github.app/assets/kigemmanuel.png">
 
-  <title>kigemmanuel (kigs) Software Engineer | Full Stack Developer</title>
-  
-  <link rel="canonical" href="https://kigemmanuel.github.io" />
-  
-  
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,10 +56,10 @@
 {
   "@context": "https://schema.org",
   "@type": "Person",
-  "name": "kigemmanuel kigs",
+  "name": "kigemmanuel",
   "alternateName": ["kig's", "kigs", "Emmanuel"],
   "url": "https://kigemmanuel.github.io",
-  "image": "https://kigemmanuel.github.io/assets/kigemmanuel.webp",
+  "image": "https://kigemmanuel.github.io/assets/kigemmanuel.png",
   "sameAs": [
     "https://kigemmanuel.vercel.app",
     "https://kigemmanuel.netlify.app",
@@ -76,7 +78,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "kigemmanuel Software Engineer",
+  "name": "kigemmanuel",
   "url": "https://kigemmanuel.github.io"
 }
 </script>
